<resources>
    <string name="app_name">NCRC</string>
    <string name="grid_item">Grid Item</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="schedule_button">Schedule</string>
    <string name="updates_button">Updates</string>
    <string name="floor_button">Floor Plan</string>
    <string name="contacts_button">Contacts</string>
    <string name="map_button">Map</string>
    <string name="website_button">Website</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_contacts">Emergency Contacts</string>
    <string name="hupd_contact">Harvard Police Department: 617&#8211;495&#8211;1212</string>
    <string name="comm_1_contact">Committee Contact 1: 857&#8211;600&#8211;1627</string>
    <string name="comm_2_contact">Committee Contact 2: 617&#8211;682&#8211;9892</string>
    <string name="comm_3_contact">Committee Contact 3: 617&#8211;657&#8211;9782</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_facebook">Facebook</string>
    <string name="title_activity_inno_1">Innovation Challenge</string>
    <string name="thurs_action">Th</string>
    <string name="fri_action">Fri</string>
    <string name="sat_action">Sat</string>
    <string name="title_activity_keynote_1">Marcia McNutt</string>
    <string name="title_activity_keynote_2">Matthew Meselson</string>
    <string name="title_activity_keynote_3">Temple Grandin</string>
    <string name="title_activity_keynote_4">Robert Langer</string>
    <string name="title_activity_keynote_5">Jack Szostak</string>
    <string name="title_activity_keynote_6">Donald Pfister</string>
    <string name="mcnutt_bio">\tMarcia McNutt is a geophysicist who is the nineteenth editor-in-chief of Science. Prior to joining Science, she served as the fifteenth director of the US Geological Survey from 2009 to 2013 as one of a group of accomplished scientists who populated top government posts as part of President Obama’s dream team. During her tenure, the USGS responded to a number of major disasters, including earthquakes in Haiti, Chile, and Japan, and the Deepwater Horizon oil spill.\n\n\tMcNutt has also served as president and chief executive officer of the Monterey Bay Aquarium Research Institute (MBARI), in Moss Landing, CA. During her time at MBARI, the institution became a leader in developing biological and chemical sensors for remote ocean deployment, installed the first deep-sea cabled observatory in US waters, and advanced the integration of artificial intelligence into autonomous underwater vehicles for complex undersea missions. McNutt began her faculty career at MIT where she became the Griswold Professor of Geophysics and served as Director of the Joint Program in Oceanography; Applied Ocean Science; Engineering, offered by MIT and the Woods Hole Oceanographic Institution. Her own research area is the dynamics of the upper mantle and lithosphere on geologic time scales, work that has taken her to distant continents and oceans for field observations. She is a veteran of more than a dozen deep-sea expeditions, more than half of which she has served as chief scientist or co-chief scientist.
        \n\n\tMcNutt’s honors and awards include membership in the National Academy of Sciences, the American Philosophical Society, and the American Academy of Arts and Sciences. She also holds honorary doctoral degrees from Colorado College, University of Minnesota, Monmouth University, and Colorado School of Mines. She was awarded the Macelwane Medal by the American Geophysical Union in 1988 for research accomplishments by a young scientist and the Maurice Ewing Medal in 2007 for her significant contributions to deep-sea exploration. The US Coast Guard awarded her their Meritorious Service Medal, the noncombat equivalent to the Bronze Star, for her work on the Deepwater Horizon oil spill. She earned a BA in Physics from Colorado College and a PhD in Earth Sciences from Scripps Institution of Oceanography, University of California, San Diego.</string>
    <string name="szostak_bio">\tDr. Szostak is an Investigator of the Howard Hughes Medical Institute, Professor of Genetics at Harvard Medical School, and the Alex Rich Distinguished Investigator in the Dept. of Molecular Biology and the Center for Computational and Integrative Biology at Massachusetts General Hospital. Dr. Szostak’s early research was on the genetics and biochemistry of DNA recombination and telomeres. His current research interests are in the laboratory synthesis of self-replicating systems, the origin of life, and applied evolutionary chemistry. He and his colleagues developed in vitro selection as a tool for the isolation of rare functional RNA, DNA and protein molecules from large pools of random sequences. His laboratory has used in vitro selection and directed evolution to isolate and characterize numerous nucleic acid sequences with specific ligand binding and catalytic properties. \n\n\tFor this work, Dr. Szostak was awarded, along with Dr. Gerald Joyce, the 1994 National Academy of Sciences Award in Molecular Biology and the 1997 Sigrist Prize from the University of Bern. Dr. Szostak is a member of the National Academy of Sciences, and a Fellow of the New York Academy of Sciences, the American Academy of Arts and Sciences, and the American Association for the Advancement of Science. In 2000, Dr. Szostak was awarded the Medal of the Genetics Society of America, and in 2006 Dr. Szostak shared the Albert Lasker Basic Medical Research Award with Elizabeth Blackburn and Carol Greider. Dr. Szostak is the 2008 recipient of the H.P. Heineken Prize in Biophysics and Biochemistry. In 2009 Dr. Szostak shared the Nobel Prize in Medicine or Physiology with Elizabeth Blackburn and Carol Greider for their work on telomeres and telomerase.</string>
    <string name="grandin_bio">\tBorn in Boston, Massachusetts, Dr. Temple Grandin’s achievements are remarkable because she was an autistic child. Many hours of speech therapy, and intensive teaching enabled Temple to learn speech. Mentoring by her high school science teacher and her aunt on her ranch in Arizona motivated Temple to study and pursue a career as a scientist and livestock equipment designer. Dr. Temple Grandin has developed animal welfare guidelines for the meat industry, consulting for McDonalds, Wendy’s, Burger King, and other companies on animal welfare. Half the cattle in the U.S. and Canada are handled in equipment she has designed for meat plants. Her book, Animals in Translation was a New York Times best seller and her book Livestock Handling an Transport, now has a fourth edition published in 2014.
\n\n\tDr. Grandin has been awarded the Meritorious Achievement Award from the Livestock Conservation Institute, named a Distinguished Alumni at Franklin Pierce College and received an honorary doctorate from McGill University, University of Illinois, and Duke University. She has also won prestigious industry awards including the Richard L. Knowlton Award from Meat Marketing and Technology Magazine and the Industry Advancement Award from the American Meat Institute and the Beef Top 40 industry leaders and the Lifetime Achievement Award from The National Cattlemen’s Beef Association. HBO recently premiered a movie about Temple’s early life and career with the livestock industry that received seven Emmy awards, a Golden Globe, and a Peabody Award. 
\n\n\tDr. Grandin is a past member of the board of directors of the Autism Society of America. Articles and interviews have appeared in the New York Times, People, Time, National Public Radio, 20/20, The View, and the BBC. She was also honored in Time Magazines 2010 The 100 Most Influential People in the World. In 2012, Temple was inducted into the Colorado Women’s Hall of Fame. </string>
    <string name="langer_bio">\tRobert S. Langer is the David H. Koch Institute Professor (there are 11 Institute Professors at MIT; being an Institute Professor is the highest honor that can be awarded to a faculty member). Dr. Langer has written over 1,280 articles. He also has nearly 1,050 patents worldwide. Dr. Langer’s patents have been licensed or sublicensed to over 250 pharmaceutical, chemical, biotechnology and medical device companies. He is the most cited engineer in history.\n\n\tHe served as a member of the United States Food and Drug Administration’s SCIENCE Board, the FDA’s highest advisory board, from 1995 to 2002 and as its Chairman from 1999 to 2002.\n\n\tDr. Langer has received over 220 major awards. He is one of 7 individuals to have received both the United States National Medal of Science (2006) and the United States National Medal of Technology and Innovation (2011). He also received the 2002 Charles Stark Draper Prize, considered the equivalent of the Nobel Prize for engineers, the 2008 Millennium Prize, the world’s largest technology prize, the 2012 Priestley Medal, the highest award of the American Chemical Society, the 2013 Wolf Prize in Chemistry, the 2014 Breakthrough Prize in Life Sciences and the 2014 Kyoto Prize. In 1989 Dr. Langer was elected to the Institute of Medicine of the National Academy of Sciences, and in 1992 he was elected to both the National Academy of Engineering and to the National Academy of Sciences, and in 2012 he was elected to the National Academy of Inventors. He received his Bachelor’s Degree from Cornell University in 1970 and his Sc.D. from the Massachusetts Institute of Technology in 1974, both in Chemical Engineering.</string>
    <string name="meselson_bio">\tBorn May 24, 1930 in Denver, Colorado, Dr. Meselson received the Ph.B. degree from the University of Chicago in 1951 and the Ph.D. from the California Institute of Technology in 1957. He was Assistant Professor of Physical Chemistry at CalTech until he joined the Harvard faculty in 1960. \n\tDr. Meselson has conducted research mainly in molecular genetics. He invented an important ultracentrifugal method for analyzing the densities of giant molecules. He and his colleagues then used it to show that DNA molecules replicate semi- conservatively in dividing cells, that genetic recombination results from the splicing of DNA molecules, and to demonstrate the existence of messenger RNA. He and his students demonstrated the enzymatic basis of hostcontrolled restriction of DNA and discovered methyl-directed repair of mismatched DNA. His current research is aimed at learning what drives the process of aging in animals. \n\tDr. Meselson is a member of the U.S. National Academy of Sciences, the Institute of Medicine, the Académie des Sciences, the Russian Academy of Sciences and the Royal Society. He has received the National Academy of Sciences Award in Molecular Biology, the Eli Lilly Award in Microbiology and Immunology, the Thomas Hunt Morgan Medal of the Genetics Society of America, , the Mendel Medal of the U.K. Genetics Society and the Albert Lasker Award for Special Achievement in Medical Science and has been awarded honorary degrees from Yale, Princeton, Northwestern and the University of Chicago. \n\tSince 1963, Dr. Meselson has had an interest in biological and chemical weapons defense and arms control and has served as a consultant on this subject to numerous government agencies. He is co-director of the Harvard Sussex Program on CBW Armament and Arms Limitation and co-editor of its quarterly journal, The CBW Conventions Bulletin. Dr. Meselson has served on the Council of the National Academy of Sciences, the Council of the Smithsonian Institution, the Committee on International Security and Arms Control of the U.S. National Academy of Sciences, and the Arms Control and Non-Proliferation Advisory Board to the Secretary of State.</string>
</resources>